per-profile cache

--- a/config/solano.yml
+++ b/config/solano.yml
@@ -12,6 +12,7 @@ test_exclude_pattern:
 tests:
   - bundle exec rspec spec/agent_spec.rb
 cache:
+  per_profile: true
   key_paths:
     - Gemfile
     - Gemfile.lock
